src/objects/Fund__c.object
<CustomObject>
    <fields>
        <fullName>Activities_Awaiting_Approval__c</fullName>
        <label>Activities Awaiting Approval</label>
        <summarizedField>Co_Op_Activity__c.Reimbursement_Amount_Requested__c</summarizedField>
        <summaryFilterItems>
            <field>Co_Op_Activity__c.Activity_Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </summaryFilterItems>
        <summaryForeignKey>Co_Op_Activity__c.Fund_Id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approved_Activities_Balance__c</fullName>
        <formula>Open_Approved_Activities__c  - Claims_Passed_Audit_Amount__c  - Approved_claims_Submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Activities Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_claims_Submitted__c</fullName>
        <label>Approved claims Submitted</label>
        <summarizedField>Co_Op_Activity__c.Approved_claim_submitted__c</summarizedField>
        <summaryFilterItems>
            <field>Co_Op_Activity__c.Activity_Status__c</field>
            <operation>equals</operation>
            <value>Approved, Claimable</value>
        </summaryFilterItems>
        <summaryForeignKey>Co_Op_Activity__c.Fund_Id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Claims_Passed_Audit_Amount__c</fullName>
        <label>Claims_Passed_Audit_Amount</label>
        <summarizedField>Co_Op_Activity__c.Claims_Passed_Audit_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Co_Op_Activity__c.Activity_Status__c</field>
            <operation>equals</operation>
            <value>Approved, Claimable</value>
        </summaryFilterItems>
        <summaryForeignKey>Co_Op_Activity__c.Fund_Id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Claims_Submitted__c</fullName>
        <label>Claims Submitted</label>
        <summarizedField>Co_Op_Activity__c.Claims_Submitted_Amount__c</summarizedField>
        <summaryForeignKey>Co_Op_Activity__c.Fund_Id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Closed_Activities_HFLOF_Amount__c</fullName>
        <label>Activities HFLOF Amount</label>
        <summarizedField>Co_Op_Activity__c.HFLOF_Amount__c</summarizedField>
        <summaryForeignKey>Co_Op_Activity__c.Fund_Id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT( Partner_Name__r.Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <label>Current Balance old</label>
        <summarizedField>Co_Op_Allocation__c.Allocation_Period_Balance__c</summarizedField>
        <summaryFilterItems>
            <field>Co_Op_Allocation__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Co_Op_Allocation__c.Fund_Id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Balance_with_HFLOF__c</fullName>
        <formula>Current_Balance__c  - Closed_Activities_HFLOF_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current Balance = Active Allocations - HFLOF claims</inlineHelpText>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fund_Id__c</fullName>
        <displayFormat>F-{000000000}</displayFormat>
        <label>Fund Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>TEXT(Partner_Name__r.Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Available_to_Request__c</fullName>
        <formula>Current_Balance_with_HFLOF__c - Approved_Activities_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Available to Request</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Open_Approved_Activities__c</fullName>
        <formula>Open_Approved_Activities__c  - (Claims_Passed_Audit_Amount__c + Approved_claims_Submitted__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Approved Activities-old</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Activity_Paid_Amount__c</fullName>
        <label>Open Activity Paid Amount</label>
        <summarizedField>Co_Op_Activity__c.Activity_Open_Approved_Amount__c</summarizedField>
        <summaryForeignKey>Co_Op_Activity__c.Fund_Id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Approved_Activities__c</fullName>
        <label>Open Approved Activities</label>
        <summarizedField>Co_Op_Activity__c.Activity_Approved_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Co_Op_Activity__c.Activity_Status__c</field>
            <operation>equals</operation>
            <value>Approved, Claimable</value>
        </summaryFilterItems>
        <summaryForeignKey>Co_Op_Activity__c.Fund_Id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PRM_Co_Op_Eligible__c</fullName>
        <label>Co-op Eligible %</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PRM_Legal_Entity_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal Entity Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRM_Main_Fund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main Fund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funds</relationshipLabel>
        <relationshipName>Funds</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fund</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Current_Balance_with_HFLOF__c</columns>
        <columns>Net_Available_to_Request__c</columns>
        <columns>Open_Approved_Activities__c</columns>
        <columns>Activities_Awaiting_Approval__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Co-op Funds</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Fund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funds</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Apex_Sharing__c</fullName>
        <label>Apex Sharing</label>
    </sharingReasons>
    <validationRules>
        <fullName>Cannot_change_Partner_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Partner_Name__c),

NOT( 
OR( 
	$Profile.Name = &apos;System Administrator&apos;, 
	$Profile.Name = &apos;Data Loader Profile&apos;, 
	$Profile.Name = &apos;Global Process Admin Profile&apos;	
) 
) 
)</errorConditionFormula>
        <errorMessage>You cannot change the partner name</errorMessage>
    </validationRules>
</CustomObject>